kubernetes/ingress-nginx/httpd-ClusterIp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: school
spec:
#  type: ExternalName
#  externalName: httpd.default.svc.cluster.local
  selector:
    app: httpd
  ports:
    - name: http
      port: 80
#      nodePort: 30082
#  type: NodePort
  type: ClusterIP
