kubernetes/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
  name: gateway
  namespace: school
spec:
  tls:
    - hosts:
      - test.com
      secretName: school-ingress-tls
  rules:
    - host: test.com
      http:
        paths:
          - backend:
              serviceName: httpd
              servicePort: 80
            path: /
          - backend:
              serviceName: springboot
              servicePort: 8082
            path: /api
          - backend:
              serviceName: springboot
              servicePort: 8082
            path: /actuator            
          - backend:
              serviceName: springboot
              servicePort: 8082
            path: /authenticate
          - backend:
              serviceName: springboot
              servicePort: 8082
            path: /reset
